src/main/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-api
  namespace: product-ns
spec:
  selector:
    matchLabels:
      app: product-api
  template:
    metadata:
      labels:
        app: product-api
    spec:
      containers:
        - name: product-sidecar
          image: anthonyikeda/product-sidecar:0.0.2-SNAPSHOT
          ports:
            - containerPort: 7080
            - containerPort: 7081
          imagePullPolicy: Never
          readinessProbe:
            httpGet:
              port: 7081
              path: /actuator/health/readiness
            initialDelaySeconds: 3
            periodSeconds: 3
          livenessProbe:
            httpGet:
              port: 7081
              path: /actuator/health/liveness
            initialDelaySeconds: 3
            periodSeconds: 3
        - name: product-api
          image: anthonyikeda/product-api:0.0.11-SNAPSHOT
          imagePullPolicy: Never
          ports:
            - containerPort: 8090
            - containerPort: 8091
          readinessProbe:
            httpGet:
              port: 8091
              path: /actuator/health/readiness
            initialDelaySeconds: 3
            periodSeconds: 3
          livenessProbe:
            httpGet:
              port: 8091
              path: /actuator/health/liveness
            initialDelaySeconds: 3
            periodSeconds: 3
