src/main/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: product-ns
  name: product-api-svc
spec:
  type: ClusterIP
  ports:
    - port: 8090
      targetPort: 8090
      protocol: TCP
      name: api-web
  selector:
    app: product-api
